--- a/code/bower.json
+++ b/code/bower.json
@@ -34,6 +34,7 @@
     "ui-select": "angular-ui-select#~0.13.1",
     "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.5",
     "d3": "~3.5.6",
-    "topojson": "~1.6.19"
+    "topojson": "~1.6.19",
+    "font-awesome": "fontawesome#~4.5.0"
   }
 }
