--- a/code/bower.json
+++ b/code/bower.json
@@ -35,6 +35,8 @@
     "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.5",
     "d3": "~3.5.6",
     "topojson": "~1.6.19",
-    "font-awesome": "fontawesome#~4.5.0"
+    "font-awesome": "fontawesome#~4.5.0",
+    "angular-highlightjs": "~0.5.1",
+    "highlightjs": "~9.0.0"
   }
 }
