--- a/code/bower.json
+++ b/code/bower.json
@@ -37,6 +37,7 @@
     "topojson": "~1.6.19",
     "font-awesome": "fontawesome#~4.5.0",
     "angular-highlightjs": "~0.5.1",
-    "highlightjs": "~9.0.0"
+    "highlightjs": "~9.0.0",
+    "angular-bootstrap-datetimepicker": "git@github.com:dalelotts/angular-bootstrap-datetimepicker.git#~1.0.1"
   }
 }
