--- a/code/bower.json
+++ b/code/bower.json
@@ -30,7 +30,7 @@
     "paper-drawer-panel": "PolymerElements/paper-drawer-panel#~1.0.3",
     "angular-chart.js": "~0.8.4",
     "Chart.js": "~1.0.2",
-    "moment": "~2.10.6",
+    "moment": "^2.11.2",
     "ui-select": "angular-ui-select#~0.13.1",
     "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.5",
     "d3": "~3.5.6",
@@ -38,6 +38,10 @@
     "font-awesome": "fontawesome#~4.5.0",
     "angular-highlightjs": "~0.5.1",
     "highlightjs": "~9.0.0",
-    "angular-bootstrap-datetimepicker": "git@github.com:dalelotts/angular-bootstrap-datetimepicker.git#~1.0.1"
+    "angular-bootstrap-datetimepicker": "git@github.com:dalelotts/angular-bootstrap-datetimepicker.git#~1.0.1",
+    "angular-moment": "^0.10.3"
+  },
+  "resolutions": {
+    "moment": "~2.10.6"
   }
 }
