--- a/code/bower.json
+++ b/code/bower.json
@@ -39,7 +39,9 @@
     "angular-highlightjs": "~0.5.1",
     "highlightjs": "~9.0.0",
     "angular-bootstrap-datetimepicker": "git@github.com:dalelotts/angular-bootstrap-datetimepicker.git#~1.0.1",
-    "angular-moment": "^0.10.3"
+    "angular-moment": "^0.10.3",
+    "angular-daterangepicker": "~0.2.2",
+    "bootstrap-daterangepicker": "~2.1.18"
   },
   "resolutions": {
     "moment": "~2.10.6"
