--- a/code/package.json
+++ b/code/package.json
@@ -20,6 +20,7 @@
     "less-plugin-clean-css": "^1.5.1"
   },
   "dependencies": {
+    "gulp-html-validator": "0.0.5",
     "gulp-ng-annotate": "^1.1.0"
   }
 }
