--- a/code/package.json
+++ b/code/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "browser-sync": "^2.8.2",
     "gulp": "^3.9.0",
+    "gulp-htmlhint": "^0.3.1",
     "gulp-if": "^1.2.5",
     "gulp-less": "^3.0.3",
     "gulp-minify-css": "^1.2.0",
