--- a/code/package.json
+++ b/code/package.json
@@ -17,10 +17,10 @@
     "gulp-uglify": "^1.2.0",
     "gulp-useref": "^1.3.0",
     "gulp-vulcanize": "^6.0.1",
-    "less-plugin-clean-css": "^1.5.1"
-  },
-  "dependencies": {
+    "less-plugin-clean-css": "^1.5.1",
     "gulp-html-validator": "0.0.5",
     "gulp-ng-annotate": "^1.1.0"
+  },
+  "dependencies": {
   }
 }
