--- a/code/bower.json
+++ b/code/bower.json
@@ -38,12 +38,13 @@
     "font-awesome": "fontawesome#~4.5.0",
     "angular-highlightjs": "~0.5.1",
     "highlightjs": "~9.0.0",
-    "angular-bootstrap-datetimepicker": "git@github.com:dalelotts/angular-bootstrap-datetimepicker.git#~1.0.1",
+    "angular-bootstrap-datetimepicker": "https://github.com/dalelotts/angular-bootstrap-datetimepicker.git#~1.0.1",
     "angular-moment": "^0.10.3",
     "highcharts": "highcharts-release#^4.2.3",
     "highcharts-export-clientside": "^1.1.4",
     "highcharts-export-csv": "export-csv#*",
-    "angular-datatables": "~0.5.3"
+    "angular-datatables": "~0.5.3",
+    "angular-file-saver": "~1.1.0"
   },
   "resolutions": {
     "moment": "~2.10.6"
