--- a/code/bower.json
+++ b/code/bower.json
@@ -14,11 +14,10 @@
     "tests"
   ],
   "dependencies": {
-    "adf-structures-base": "~0.1.1",
     "angular": "~1.4.6",
     "angular-base64": "~2.0.5",
     "angular-bootstrap": "~0.13.4",
-    "angular-bootstrap-datetimepicker": "git@github.com:dalelotts/angular-bootstrap-datetimepicker.git#~1.0.1",
+    "angular-bootstrap-datetimepicker": "https://github.com/dalelotts/angular-bootstrap-datetimepicker.git#~1.0.1",
     "angular-chart.js": "~0.8.4",
     "angular-cookies": "~1.4.6",
     "angular-highlightjs": "~0.5.1",
@@ -45,9 +44,8 @@
     "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.5",
     "topojson": "~1.6.19",
     "ui-select": "angular-ui-select#~0.13.1",
-    "angular-moment": "^0.10.3",
     "angular-daterangepicker": "~0.2.2",
-    "bootstrap-daterangepicker": "~2.1.18",
+    "bootstrap-daterangepicker": "~2.1.18"
   },
   "resolutions": {
     "moment": "~2.10.6"
