--- a/code/bower.json
+++ b/code/bower.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "angular": "~1.4.6",
     "angular-base64": "~2.0.5",
-    "angular-bootstrap": "~0.13.4",
+    "angular-bootstrap": "0.14.3",
     "angular-bootstrap-datetimepicker": "https://github.com/dalelotts/angular-bootstrap-datetimepicker.git#~1.0.1",
     "angular-chart.js": "~0.8.4",
     "angular-cookies": "~1.4.6",
+    "angular-dashboard-framework": "~0.11.0",
+    "angular-daterangepicker": "~0.2.2",
     "angular-highlightjs": "~0.5.1",
     "angular-moment": "^0.10.3",
     "angular-resource": "~1.4.6",
@@ -27,6 +29,7 @@
     "angular-touch": "~1.4.6",
     "angular-ui-router": "~0.2.15",
     "bootstrap": "~3.3.5",
+    "bootstrap-daterangepicker": "~2.1.18",
     "Chart.js": "~1.0.2",
     "d3": "~3.5.6",
     "font-awesome": "fontawesome#~4.5.0",
@@ -43,9 +46,7 @@
     "paper-drawer-panel": "PolymerElements/paper-drawer-panel#~1.0.3",
     "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.5",
     "topojson": "~1.6.19",
-    "ui-select": "angular-ui-select#~0.13.1",
-    "angular-daterangepicker": "~0.2.2",
-    "bootstrap-daterangepicker": "~2.1.18"
+    "ui-select": "angular-ui-select#~0.13.1"
   },
   "resolutions": {
     "moment": "~2.10.6"
