--- a/code/bower.json
+++ b/code/bower.json
@@ -30,7 +30,7 @@
     "paper-drawer-panel": "PolymerElements/paper-drawer-panel#~1.0.3",
     "angular-chart.js": "~0.8.4",
     "Chart.js": "~1.0.2",
-    "moment": "^2.11.2",
+    "moment": "~2.12.0",
     "ui-select": "angular-ui-select#~0.13.1",
     "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.5",
     "d3": "~3.5.6",
@@ -47,6 +47,6 @@
     "angular-file-saver": "~1.1.0"
   },
   "resolutions": {
-    "moment": "~2.10.6"
+    "moment": "~2.12.0"
   }
 }
