--- a/code/package.json
+++ b/code/package.json
@@ -11,17 +11,19 @@
   "devDependencies": {
     "browser-sync": "^2.8.2",
     "gulp": "^3.9.0",
+    "gulp-html-validator": "0.0.5",
     "gulp-htmlhint": "^0.3.1",
     "gulp-if": "^1.2.5",
+    "gulp-jshint": "^2.0.0",
     "gulp-less": "^3.0.3",
     "gulp-minify-css": "^1.2.0",
+    "gulp-ng-annotate": "^1.1.0",
     "gulp-uglify": "^1.2.0",
     "gulp-useref": "^1.3.0",
     "gulp-vulcanize": "^6.0.1",
-    "less-plugin-clean-css": "^1.5.1",
-    "gulp-html-validator": "0.0.5",
-    "gulp-ng-annotate": "^1.1.0"
+    "jshint": "^2.9.1",
+    "jshint-stylish": "^2.1.0",
+    "less-plugin-clean-css": "^1.5.1"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
