--- a/code/bower.json
+++ b/code/bower.json
@@ -18,6 +18,7 @@
     "angular-base64": "~2.0.5",
     "angular-bootstrap": "0.14.3",
     "angular-bootstrap-datetimepicker": "https://github.com/dalelotts/angular-bootstrap-datetimepicker.git#~1.0.1",
+    "angular-bootstrap-toggle-switch": "~0.5.6",
     "angular-chart.js": "~0.8.4",
     "angular-cookies": "~1.4.6",
     "angular-dashboard-framework": "~0.11.0",
