--- a/code/bower.json
+++ b/code/bower.json
@@ -47,10 +47,10 @@
     "ngstorage": "~0.3.9",
     "oclazyload": "~1.0.9",
     "paper-drawer-panel": "PolymerElements/paper-drawer-panel#~1.0.3",
-    "moment": "~2.12.0",
     "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.5",
     "topojson": "~1.6.24",
-    "ui-select": "angular-ui-select#~0.13.1"
+    "ui-select": "angular-ui-select#~0.13.1",
+    "angular-clipboard": "^1.3.0"
   },
   "resolutions": {
     "moment": "~2.12.0"
