--- a/code/bower.json
+++ b/code/bower.json
@@ -50,7 +50,8 @@
     "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.5",
     "topojson": "~1.6.24",
     "ui-select": "angular-ui-select#~0.13.1",
-    "angular-clipboard": "^1.3.0"
+    "angular-clipboard": "^1.3.0",
+    "ng-scrollbars": "^0.0.10"
   },
   "resolutions": {
     "moment": "~2.12.0"
