--- a/code/bower.json
+++ b/code/bower.json
@@ -20,14 +20,12 @@
     "angular-bootstrap-datetimepicker": "https://github.com/dalelotts/angular-bootstrap-datetimepicker.git#~1.0.1",
     "angular-bootstrap-toggle-switch": "~0.5.6",
     "angular-chart.js": "~0.8.4",
-    "angular-clipboard": "^1.3.0",
     "angular-cookies": "~1.4.6",
     "angular-dashboard-framework": "~0.11.0",
     "angular-datatables": "~0.5.3",
     "angular-daterangepicker": "~0.2.2",
     "angular-file-saver": "~1.1.0",
     "angular-highlightjs": "~0.5.1",
-    "angular-intro.js": "~2.0.1",
     "angular-moment": "^0.10.3",
     "angular-resource": "~1.4.6",
     "angular-sanitize": "~1.4.6",
@@ -42,18 +40,18 @@
     "highcharts-export-clientside": "^1.1.4",
     "highcharts-export-csv": "export-csv#*",
     "highlightjs": "~9.0.0",
-    "intro.js": "~2.1.0",
     "jsoneditor": "~4.2.1",
     "lodash": "~3.10.1",
     "moment": "~2.12.0",
     "ng-jsoneditor": "angular-tools/ng-jsoneditor",
     "ngstorage": "~0.3.9",
     "oclazyload": "~1.0.9",
-    "PACE": "pace#^1.0.2",
     "paper-drawer-panel": "PolymerElements/paper-drawer-panel#~1.0.3",
     "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.5",
     "topojson": "~1.6.24",
-    "ui-select": "angular-ui-select#~0.13.1"
+    "ui-select": "angular-ui-select#~0.13.1",
+    "angular-clipboard": "^1.3.0",
+    "PACE": "pace#^1.0.2"
   },
   "resolutions": {
     "moment": "~2.12.0"
