--- a/code/bower.json
+++ b/code/bower.json
@@ -14,12 +14,13 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.4.6",
+    "angular": "#1.4.10",
     "angular-base64": "~2.0.5",
     "angular-bootstrap": "0.14.3",
     "angular-bootstrap-datetimepicker": "https://github.com/dalelotts/angular-bootstrap-datetimepicker.git#~1.0.1",
     "angular-bootstrap-toggle-switch": "~0.5.6",
     "angular-chart.js": "~0.8.4",
+    "angular-clipboard": "^1.3.0",
     "angular-cookies": "~1.4.6",
     "angular-dashboard-framework": "~0.11.0",
     "angular-datatables": "~0.5.3",
@@ -27,6 +28,7 @@
     "angular-file-saver": "~1.1.0",
     "angular-highlightjs": "~0.5.1",
     "angular-intro.js": "~2.0.1",
+    "angular-messages": "~1.5.5",
     "angular-moment": "^0.10.3",
     "angular-resource": "~1.4.6",
     "angular-sanitize": "~1.4.6",
@@ -48,14 +50,14 @@
     "ng-jsoneditor": "angular-tools/ng-jsoneditor",
     "ngstorage": "~0.3.9",
     "oclazyload": "~1.0.9",
+    "PACE": "pace#^1.0.2",
     "paper-drawer-panel": "PolymerElements/paper-drawer-panel#~1.0.3",
     "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.5",
     "topojson": "~1.6.24",
-    "ui-select": "angular-ui-select#~0.13.1",
-    "angular-clipboard": "^1.3.0",
-    "PACE": "pace#^1.0.2"
+    "ui-select": "angular-ui-select#~0.13.1"
   },
   "resolutions": {
-    "moment": "~2.12.0"
+    "moment": "~2.12.0",
+    "angular": "1.4.10"
   }
 }
