--- a/code/bower.json
+++ b/code/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "angular": "#1.4.10",
+    "angular-animate": "~1.5.5",
     "angular-base64": "~2.0.5",
     "angular-bootstrap": "0.14.3",
     "angular-bootstrap-datetimepicker": "https://github.com/dalelotts/angular-bootstrap-datetimepicker.git#~1.0.1",
