--- a/code/bower.json
+++ b/code/bower.json
@@ -58,6 +58,7 @@
     "ui-select": "angular-ui-select#~0.13.1",
     "select2": "~3.4.5",
     "select2-bootstrap-css": "~1.4.6"
+    "AngularJS-Toaster": "angularjs-toaster#^2.0.0"
   },
   "resolutions": {
     "moment": "~2.12.0",
