--- a/code/bower.json
+++ b/code/bower.json
@@ -57,7 +57,8 @@
     "topojson": "~1.6.24",
     "ui-select": "angular-ui-select#~0.13.1",
     "select2": "~3.4.5",
-    "select2-bootstrap-css": "~1.4.6"
+    "select2-bootstrap-css": "~1.4.6",
+    "angular-nicescroll": "^0.0.9"
   },
   "resolutions": {
     "moment": "~2.12.0",
