--- a/code/bower.json
+++ b/code/bower.json
@@ -59,7 +59,8 @@
     "select2": "~3.4.5",
     "select2-bootstrap-css": "~1.4.6",
     "AngularJS-Toaster": "angularjs-toaster#^2.0.0",
-    "angular-nicescroll": "^0.0.9"
+    "angular-nicescroll": "^0.0.9",
+    "angular-loading": "~0.1.4"
   },
   "resolutions": {
     "moment": "~2.12.0",
