--- a/code/bower.json
+++ b/code/bower.json
@@ -60,7 +60,8 @@
     "select2-bootstrap-css": "~1.4.6",
     "AngularJS-Toaster": "angularjs-toaster#^2.0.0",
     "angular-nicescroll": "^0.0.9",
-    "angular-loading-bar": "~0.9.0"
+    "angular-loading-bar": "~0.9.0",
+    "sweetalert": "^1.1.3"
   },
   "resolutions": {
     "moment": "~2.12.0",
