--- a/code/bower.json
+++ b/code/bower.json
@@ -61,7 +61,8 @@
     "AngularJS-Toaster": "angularjs-toaster#^2.0.0",
     "angular-nicescroll": "^0.0.9",
     "angular-loading-bar": "~0.9.0",
-    "sweetalert": "^1.1.3"
+    "sweetalert": "^1.1.3",
+    "Sortable": "^1.4.2"
   },
   "resolutions": {
     "moment": "~2.12.0",
