--- a/code/bower.json
+++ b/code/bower.json
@@ -29,12 +29,16 @@
     "angular-file-saver": "~1.1.0",
     "angular-highlightjs": "~0.5.1",
     "angular-intro.js": "~2.0.1",
+    "angular-loading-bar": "~0.9.0",
     "angular-messages": "~1.5.5",
     "angular-moment": "^0.10.3",
+    "angular-nicescroll": "^0.0.9",
+    "angular-object-diff": "~1.0.3",
     "angular-resource": "~1.4.6",
     "angular-sanitize": "~1.4.6",
     "angular-touch": "~1.4.6",
     "angular-ui-router": "~0.2.15",
+    "AngularJS-Toaster": "angularjs-toaster#^2.0.0",
     "bootstrap": "~3.3.5",
     "bootstrap-daterangepicker": "~2.1.18",
     "Chart.js": "~1.0.2",
@@ -54,15 +58,12 @@
     "PACE": "pace#^1.0.2",
     "paper-drawer-panel": "PolymerElements/paper-drawer-panel#~1.0.3",
     "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.5",
-    "topojson": "~1.6.24",
-    "ui-select": "angular-ui-select#~0.13.1",
     "select2": "~3.4.5",
     "select2-bootstrap-css": "~1.4.6",
-    "AngularJS-Toaster": "angularjs-toaster#^2.0.0",
-    "angular-nicescroll": "^0.0.9",
-    "angular-loading-bar": "~0.9.0",
+    "Sortable": "^1.4.2",
     "sweetalert": "^1.1.3",
-    "Sortable": "^1.4.2"
+    "topojson": "~1.6.24",
+    "ui-select": "angular-ui-select#~0.13.1"
   },
   "resolutions": {
     "moment": "~2.12.0",
