--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,11 @@ node_modules
 bower_components
 test/ui/node_modules
 test/ui/results
-test/ui/config/local.json
+test/ui/config/local*.js*
 .tmp
 *sublime*
 sftp-config.json
 local.js
 code/public/
 code/dev/config.js
+*npm-debug.log
