--- a/code/bower.json
+++ b/code/bower.json
@@ -61,7 +61,8 @@
     "sweetalert": "^1.1.3",
     "topojson": "~1.6.24",
     "ui-select": "angular-ui-select#~0.13.1",
-    "angular-youtube-mb": "^1.3.1"
+    "angular-youtube-mb": "^1.3.1",
+    "satellizer": "^0.15.5"
   },
   "resolutions": {
     "moment": "~2.12.0",
