--- a/code/bower.json
+++ b/code/bower.json
@@ -61,11 +61,12 @@
     "sweetalert": "^1.1.3",
     "topojson": "~1.6.24",
     "ui-select": "angular-ui-select#~0.13.1",
-    "angular-youtube-mb": "^1.3.1",
-    "satellizer": "^0.15.5"
+    "satellizer": "^0.15.5",
+    "ng-youtube-embed": "^1.7.7"
   },
   "resolutions": {
     "moment": "~2.12.0",
-    "angular": "1.4.10"
+    "angular": "1.4.10",
+    "ng-youtube-embed": "1.7.7"
   }
 }
