--- a/code/bower.json
+++ b/code/bower.json
@@ -57,16 +57,19 @@
     "PACE": "pace#^1.0.2",
     "select2": "~3.4.5",
     "select2-bootstrap-css": "~1.4.6",
-    "Sortable": "^1.4.2",
+    "Sortable": "1.4.2",
     "sweetalert": "^1.1.3",
     "topojson": "~1.6.24",
     "ui-select": "angular-ui-select#~0.13.1",
     "satellizer": "^0.15.5",
-    "ng-youtube-embed": "^1.7.7"
+    "ng-youtube-embed": "^1.7.7",
+    "datatables.net": "^1.10.15"
   },
   "resolutions": {
     "moment": "~2.12.0",
     "angular": "1.4.10",
-    "ng-youtube-embed": "1.7.7"
+    "ng-youtube-embed": "1.7.7",
+    "angular-datatables": "0.5.5",
+    "Sortable": "1.4.2"
   }
 }
