--- a/code/package.json
+++ b/code/package.json
@@ -35,6 +35,7 @@
     "gulp-uglify": "^1.2.0",
     "gulp-useref": "^1.3.0",
     "gulp-vulcanize": "^6.0.1",
+    "htmlhint": "^0.9.13",
     "jshint": "^2.9.1",
     "jshint-stylish": "^2.1.0",
     "less-plugin-clean-css": "^1.5.1",
