--- a/code/.htmlhintrc
+++ b/code/.htmlhintrc
@@ -8,7 +8,7 @@
   "id-unique": false,
   "src-not-empty": true,
   "attr-no-duplication": true,
-  "title-require": true,
+  "title-require": false,
   "head-script-disabled": true,
   "attr-value-not-empty": false,
   "tag-self-close": false,
